Change padding variable to spacing and fix media query left padding

--- a/src/css/initial.css
+++ b/src/css/initial.css
@@ -23,7 +23,7 @@
     
     /* general padding size */
     /* use only margin and padding purposes */
-    --padding: calc(var(--rem) * 1.6);
+    --spacing: calc(var(--rem) * 1.6);
 
     scroll-behavior: smooth;
 }
@@ -114,7 +114,7 @@ select {
 /**************************************************/
 
 .container {
-    padding-inline: var(--padding);
+    padding-inline: var(--spacing);
     width: 100%;
     max-width: 800px;
     margin-inline: auto;
@@ -165,4 +165,8 @@ select {
 
 .fw-regular {
     font-weight: 400;
+}
+
+.fw-bold {
+    font-weight: 700;
 }
