--- a/src/css/main.css
+++ b/src/css/main.css
@@ -84,7 +84,7 @@
   margin-top: calc(var(--rem) * 5);
   height: 100vh;
   position: relative;
-  padding-block: calc(var(--padding) * 3);
+  padding-block: calc(var(--spacing) * 3);
   padding-inline: calc(var(--rem) * 5);
   line-height: 1.2;
   text-align: center;
@@ -123,8 +123,8 @@
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  font-size: calc(var(--rem) * 2.2);
-  gap: var(--padding);
+  font-size: calc(var(--rem) * 2.1);
+  gap: var(--spacing);
 }
 
 /* here style only dot component found on hero bg */
@@ -141,11 +141,11 @@
 }
 
 .hero .btn-projects {
-  width: calc(var(--rem) * 16);
+  width: calc(var(--rem) * 18);
   height: auto;
-  padding: 1.2rem;
+  padding: 1.5rem;
   margin-inline: auto;
-  margin-top: 5rem;
+  margin-top: 4rem;
 }
 
 /* project section styling */
@@ -156,10 +156,10 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: flex-start;
-  gap: var(--padding);
+  gap: var(--spacing);
 
   /* before main footer section needed */
-  margin-bottom: var(--padding);
+  margin-bottom: var(--spacing);
 }
 
 .projects-container .container > * {
@@ -169,14 +169,14 @@
 
 .projects-title {
   font-size: calc(var(--rem) * 3.6);
-  margin-bottom: var(--padding);
+  margin-bottom: var(--spacing);
 }
 
 .card {
   position: relative;
   background-color: hsl(var(--clr-l-gray));
   border-radius: calc(var(--rem));
-  padding: var(--padding);
+  padding: var(--spacing);
   overflow: hidden;
   /* use z-index: 0 for parent element, -1 for dot component */
   z-index: 0;
@@ -199,7 +199,7 @@
   position: relative;
   overflow: hidden;
   border-radius: var(--rem);
-  margin-bottom: var(--padding);
+  margin-bottom: var(--spacing);
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
@@ -252,7 +252,7 @@
 }
 
 .card-content--container {
-  margin-bottom: var(--padding);
+  margin-bottom: var(--spacing);
 }
 
 .card-title--container {
@@ -260,7 +260,7 @@
   justify-content: flex-start;
   align-items: center;
   gap: calc(var(--rem));
-  margin-bottom: var(--padding);
+  margin-bottom: var(--spacing);
 }
 
 .card-title--container .dot-container {
@@ -268,7 +268,7 @@
 }
 
 .card-title {
-  font-size: calc(var(--rem) * 3.6);
+  font-size: calc(var(--rem) * 3);
   padding-bottom: calc(var(--rem) * 0.5);
   white-space: nowrap;
   overflow: hidden;
@@ -311,7 +311,7 @@
 /* footer styling */
 
 footer {
-  background-color: hsl(var(--clr-blue));
+  background: linear-gradient(90deg, var(--clr-linear));
 }
 
 footer .container {
