--- a/src/css/media.css
+++ b/src/css/media.css
@@ -26,7 +26,7 @@
     }
 
     .hero .container{
-        padding-right: calc(var(--rem) * 12);
+        padding-inline: var(--spacing) calc(var(--rem) * 20);
         text-align: left;
     }
 
